@@ -267,13 +267,13 @@ void BuiltInPDFView::paintContent(GraphicsContext* graphicsContext, const IntRec
     int pageTop = 0;
     for (size_t i = 0; i < m_pageBoxes.size(); ++i) {
         IntRect pageBox = m_pageBoxes[i];
+        float extraOffsetForCenteringX = max((m_frameRect.width() - pageBox.width()) / 2.0f, 0.0f);
+        float extraOffsetForCenteringY = (m_pageBoxes.size() == 1) ? max((m_frameRect.height() - pageBox.height() + shadowOffsetY) / 2.0f, 0.0f) : 0;
+
         if (pageTop > contentRect.maxY())
             break;
-        if (pageTop + pageBox.height() >= contentRect.y()) {
+        if (pageTop + pageBox.height() + extraOffsetForCenteringY + gutterHeight >= contentRect.y()) {
             CGPDFPageRef pdfPage = CGPDFDocumentGetPage(m_pdfDocument.get(), i + 1);
-
-            float extraOffsetForCenteringX = max((m_frameRect.width() - pageBox.width()) / 2.0f, 0.0f);
-            float extraOffsetForCenteringY = (m_pageBoxes.size() == 1) ? max((m_frameRect.height() - pageBox.height() + shadowOffsetY) / 2.0f, 0.0f) : 0;
 
             graphicsContext->save();
             graphicsContext->translate(extraOffsetForCenteringX - pageBox.x(), -extraOffsetForCenteringY - pageBox.y() - pageBox.height());
